@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/File-Scan-ClamAV
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Scan-ClamAV/ChangeLog,v 1.1 2009/05/17 08:44:19 dertobi123 Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/File-Scan-ClamAV/ChangeLog,v 1.2 2011/08/30 15:43:16 tove Exp $
+
+*File-Scan-ClamAV-1.910.0 (30 Aug 2011)
+
+  30 Aug 2011; Torsten Veller <tove@gentoo.org>
+  +File-Scan-ClamAV-1.910.0.ebuild:
+  Change version scheme
 
 *File-Scan-ClamAV-1.91 (17 May 2009)
 
